@@ -10,6 +10,7 @@ core 2.3.1 - not released yet
 	* Bugfix: Right requirement wasn't parsed correctly if there is only one rights-section
 	* Bugfix: Enable live validation for record selector
 	* Bugfix: Possibility to remove warning-message of live-validator
+	* Bugfix: Fallback for setting timezone to prevent fatal errors
 
 core 2.3.0 - 2013-03-27
 	* Added: CSS-cropping of list table content
